# service-url-shortener

./: .editorconfig  .eslintrc.js  Makefile  README.md  app.js  package-lock.json  package.json  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
app/routers/: tokens.py  urls.py  users.py
app/services/: tokens.py  urls.py  users.py
config/: index.js
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 6868f1928f26_create_all_tables.py
models/: index.js  url.js
routes/: index.js
tests/: test_api.py
